src/objects/echosign_dev1__Environment_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Config_API_URL__c</fullName>
        <label>Config API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Config_Oauth_API_URL__c</fullName>
        <label>Config Oauth API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Config_URL__c</fullName>
        <label>Config URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Environment_Name__c</fullName>
        <description>Set to Production, Stage, AWSPreview, Preview or Demo. Leave blank to stay on production.</description>
        <inlineHelpText>Set to Production, Stage, AWSPreview, Preview or Demo. Leave blank to stay on production.</inlineHelpText>
        <label>Environment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Adobe Sign Environment Settings</label>
</CustomObject>